samples/_failures_safe/1761665938_2048e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3c6fb845.c: In function ‘main’:
./samples/SAFE/__tmp_3c6fb845.c:144:12: error: missing terminating " character
  144 |     printf("  INFO: %.2f%%\n
      |            ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_3c6fb845.c:144:5: error: expected expression at end of input
  144 |     printf("  INFO: %.2f%%\n
      |     ^~~~~~
./samples/SAFE/__tmp_3c6fb845.c:144:5: error: expected declaration or statement at end of input
